--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="shortcut icon" href="/static/media/RPM.7963000afe70d7898823.png" type="image/x-icon">
     <title>RPM Esports</title>
   </head>
   <body>
